--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "bootstrap": "^3.3.7",
+    "ajv": "^6.10.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "jquery": "^1.9.1",
+    "popper.js": "^1.15.0",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
